re PR other/8289 (Errorneous prototypes of xmmintrin.h functions)

PR other/8289
	* xmmintrin.h: Add const to the argument of loads.

	* i386.md (pushv2di): New pattern.
	PR target/6890
	* xmmintrin.h (_MM_TRANSPOSE4_PS): New.

From-SVN: r58428